[package]
name = "tipe2"
version = "0.1.0"
authors = ["Théo Degioanni <moxinilian@tutanota.com>","Mathieu Bessou <bessou.mathieu@gmail.com>"]
edition = "2018"


[dependencies]
ncollide3d = "0.21.0"
rand = "0.5.0"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
ron = "0.4.0"
crossbeam-deque = "0.6.1"
clap = "2.32"
crossbeam-channel = "0.2.6"
specs = "0.14"
byteorder = "1"
lazy_static = "1.3.0"
chrono = "0.4"
itertools = "0.8"
rustfft = "3.0.0"
bit-vec = "0.6.0"

[dependencies.nalgebra]
version = "0.19"
features = ["serde-serialize"]
